"$Id$"
Top of SVN tree:
------------------------------------------------------------------------------

Improve metaserver handling some - in particular, if server is listed
on both metaserver 1 & 2, listed it only once.  Also, for gtk2 client,
fix handling of not showing cached entries if they are listed on the
metaserver.  Add filtering of protocol versions, so we only show player
compatible servers.
--
common/metaserver.c: Add check_server_version() to do version checking.
  Add checks to find duplicate server entries.
gtk-v2/src/metaserver.c: Move retrieval of data from metaserver before
  adding cached entries to table - otherwise, can not detect duplicates.
  Add check to proper version information.
MSW 2007-09-13

common/client.h
- Add doxygen file header.
gtk-v2/src/gtk2proto.h
gtk-v2/src/main.c
gtk-v2/src/metaserver.c
- Remove unused return value for get_metaserver().
gtk-v2/src/metaserver.c
- Doxygen commenting, and add comment headers for all functions.
- Remove commented-out IP Address column formerly shown in metaserver dialog.
Kevin Bulgrien 2007-09-05

gtk-v2/src/menubar.c
  - Doxygenification of source/comments.
Kevin Bulgrien 2007-09-04

gtk-v2/src/about.c
gtk-v2/src/image.h
gtk-v2/src/sound.c
gtk-v2/src/main.h
  - Doxygenification of comments and files.
Kevin Bulgrien 2007-09-03

gtk-v2/glade/AUTHORS
  - Adjust some glade file descriptions.
gtk-v2/glade/oroboros.glade
  - Reorder character data tabs.
Kevin Bulgrien 2007-09-03

gtk-v2/glade/AUTHORS
  - Add oroboros.glade and add short paragraph descriptions of each of the new
    layout files.
gtk-v2/glade/Makefile.am
gtk-v2/glade/Makefile.in
gtk-v2/glade/oroboros.glade
gtk-v2/glade/oroboros.gladep
  - A layout designed expressly for clients running with 1024x768 resolution.
Doxyfile
  - Copied from server; modified and added for client.
prop svn:ignore
  - Add autom4te
gtk-v2/src/main.c
  - Tabs --> spaces, commenting, and doxygenation. No functional code changes.
Kevin Bulgrien 2007-09-03
